* New: Aggressive multi-target assignment.
* New: Excessive damage may be skipped on dead units.
* New: Add L and R label to paper dolls.
* Mod: ShortPilotHint now hides HP by default, to avoid line wrapping on elite mechwarriors.
* Mod: ShowNumericInfo no longer shows pc movement points during enemy attacks.
* Mod: ShowAmmoInTooltip now darkens non-exploding ammo bins.
* Fix: FacingMarkerEnemyColors not applied when FacingMarkerPlayerColors is empty.
* Fix: NPE when FacingMarkerPlayerColors is non-empty but FacingMarkerEnemyColors is empty.
* Fix: FloatingArmorColours no longer applies to target panel.
* Fix: Geothermal and Radiation Field are now factored in heat preview fix.
* Fix: Range meters in hit modifier list no longer show decimal.
* Fix: Distance info is now displayed for non-mech units.
* Fix: FixPaperDollRearStructure now works in campaign, without going through combat first.
* Fix: DFA self-damage log location misalignment.

2018-09-15 AIM Version 2.5 for BATTLETECH 1.2.0

* New: Fix heat prediction on move/jump/sprint preview.
* New: Show distance number in target panel, and movement point in selection panel.
* New: Show mechwarrior stats in one-line mouseover hint, instead of only HP.
* New: Variable melee height difference limit by mech class.
* New: Configure friends' and foes' crit multiplier.
* New: Vehicles and Turrets may now be crit'ed and killed by ammo explosions.
* New: Critical hits now follows damage transfer.
* New: Critical hits rates and cap may be set.
* New: Critical hits may optionally happens through armour.
* New: Critical hits may optionally ignore destroyed component and space.
* New: Critical hits may optionally be transferred inward when there is nothing to crit.
* New: Critical hits may optionally be rolled until there is no more crit chance.
* New: Prevent critical hit on locations with intact structure.
* New: Attack Log now logs DFA self-damage and overheat self-damage.